--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,21 @@
             android:src="@drawable/minute_workout"
             android:scaleType="centerCrop"/>
 
+        <LinearLayout
+            android:layout_width="@dimen/start_button_size"
+            android:layout_height="@dimen/start_button_size"
+            android:layout_marginTop="@dimen/start_button_margin_top"
+            android:gravity="center"
+            >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/start"
+
+            />
+
+    </LinearLayout>
 
     </LinearLayout>
 
