--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#B2212121</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorHighLighted">#C4C4C4</color>
 </resources>
