--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,22 @@
         <LinearLayout
             android:layout_width="@dimen/start_button_size"
             android:layout_height="@dimen/start_button_size"
-            android:layout_marginTop="@dimen/start_button_margin_top"
+            android:layout_marginTop="40dp"
             android:gravity="center"
-            >
+            android:background="@drawable/item_circular_color_accent_border"
+            android:layout_gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/start"
+            <TextView
 
-            />
+                android:id="@+id/llStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/start"
+                android:textAllCaps="true"
+                android:textColor="@color/colorPrimary"
+                android:textSize="30sp" />
 
-    </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
