--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="colorPrimary">#B2212121</color>
+    <color name="colorPrimaryDark">#B2212121</color>
+    <color name="colorAssent">#000080</color>
+
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorHighLighted">#C4C4C4</color>
 </resources>
