--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,9 @@
 
     <color name="colorPrimary">#B2212121</color>
     <color name="colorPrimaryDark">#B2212121</color>
-    <color name="colorAssent">#000080</color>
+    <color name="colorAssent">#0D0D7B</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="toolbar_color_control">#FFFFFF</color>
     <color name="colorHighLighted">#C4C4C4</color>
 </resources>
