--- a/app/src/main/res/drawable/item_circular_design.xml
+++ b/app/src/main/res/drawable/item_circular_design.xml
@@ -3,9 +3,11 @@
     android:shape="oval">
 
     <stroke
-        android:width="8dp"
-        android:color="@color/colorAssent" />
+        android:color="@color/colorAssent"
+        android:width="5dp" />
 
-    <solid android:color="@color/white"/>
+    <solid
+        android:color="@color/colorAssent"
+        />
 
 </shape>
