--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -69,9 +69,30 @@
                 android:textStyle="bold"
                 android:text="@string/_10" />
 
+
             </LinearLayout>
 
         </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/upcoming_exercise_is"
+            android:textColor="#21212121"
+            android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvUpcomingExerciseName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            tools:text = "Exercise Name"
+            android:textColor="@color/colorAssent"
+            android:layout_marginTop="10dp"
+            android:textStyle="bold" />
+
 
     //Layout for next Activity
 
@@ -99,6 +120,7 @@
             android:src="@drawable/ic_jumping_jack"/>
 
         <TextView
+            android:id="@+id/tv_exercise_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/exercise_name"
