--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -99,14 +99,14 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:id="@+id/llExerciseView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_above="@+id/rvExerciseStatus"
         android:layout_below="@id/toolbar_exercise_activity"
         android:gravity="center"
+        android:orientation="vertical"
         android:visibility="gone"
         tools:visibility="visible">
 
@@ -115,9 +115,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:scaleType="fitXY"
             android:contentDescription="@string/image"
-            android:src="@drawable/ic_jumping_jack"/>
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_jumping_jack" />
 
         <TextView
             android:id="@+id/tv_exercise_name"
@@ -136,10 +136,10 @@
 
             <ProgressBar
                 android:id="@+id/tvExerciseProgressBar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
-                style="?android:attr/progressBarStyleHorizontal"
                 android:background="@drawable/circular_progress_gray"
                 android:indeterminate="false"
                 android:max="30"
@@ -158,18 +158,24 @@
                     android:id="@+id/tvExerciseTimer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/_30sp"
                     android:textColor="#FFFFFF"
                     android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:text="@string/_30sp" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
         </FrameLayout>
 
 
-
     </LinearLayout>
 
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/rvExerciseStatus"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_margin="5dp" />
 
 </RelativeLayout>
