--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -11,10 +11,9 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/finish_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ToolbarTheme"
-        app:title="7MinuteWorkout"
         app:titleTextColor="@color/white"
+        android:theme="@style/ToolbarTheme"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorAssent"/>
 
     <TextView
@@ -22,26 +21,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="END"
-        android:textSize="50sp"
-        android:textColor="@color/colorAssent"
+        android:textSize="35sp"
         android:gravity="center"
+        android:textColor="@color/colorAssent"
         style="@style/TextAppearance.AppCompat.Body1"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="35dp" />
 
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/item_circular_color_accent_border"
-        android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center">
 
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/tick_layout" />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:contentDescription="@string/image"
+            android:background="@color/white"
+            android:src="@drawable/ic_action_name" />
 
     </LinearLayout>
 
@@ -78,6 +78,7 @@
             android:textSize="18sp"
             android:backgroundTint="@color/colorAssent"
             android:text="@string/finish"
+            android:textColor="@color/white"
             android:padding="15dp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"/>
