--- a/app/src/main/res/layout/activity_bmi_activity.xml
+++ b/app/src/main/res/layout/activity_bmi_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".bmi_activity">
+    tools:context=".activities.bmi_activity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_bmi_activity"
