--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -46,6 +46,7 @@
         />
 
     <Button
+        android:id="@+id/btn_SignUp_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -56,6 +57,7 @@
         android:background="@drawable/shade" />
 
     <Button
+        android:id="@+id/btn_SignIn_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
