--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -68,7 +68,7 @@ android:orientation="vertical">
             android:layout_marginEnd="10dp">
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/et_email_signin"
+                android:id="@+id/et_email_SignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAssent"
@@ -86,7 +86,7 @@ android:orientation="vertical">
             android:layout_marginEnd="10dp">
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/et_password_signin"
+                android:id="@+id/et_password_SignIn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorAssent"
