--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,11 +7,15 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="match_parent"
+    android:background="@color/colorAssent"
     tools:context=".activities.SplashScreen">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/minute_workout" />
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/_7minuteworkout"
+       android:fontFamily="@font/weloved_freetrial"
+       android:textSize="40sp"
+       android:textColor="@color/white" />
 
 </LinearLayout>
